2004-01-23  Hiroshi Fujishima  <pooh@nature.tsukuba.ac.jp>

	* w3m.el (w3m-input-url): Fix a bug which causes an error when
	there's neither a frame nor a window for the emacs-w3m session and
	`url' is the symbol `popup' (it is because there's a url-like text
	around the cursor but deleted by a user in the minibuffer).

2004-01-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-input-url): Add "http://" to its return value, when
	its return value contains no scheme part.

2004-01-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-clear-contents): Improve tags
	pointing to the advertisement; go to the beginning of the buffer.

2004-01-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-slashdot-jp.el: Succeeded by sb-slashdot-jp-rss.el.

	* w3m.el (w3m-w3m-dump-extra): Check cache control headers before
	caching headers and contents.  This change is suggested by
	Mr. Amagai in [emacs-w3m:06255].
	(w3m-message): Make it verbose, even if a buffer related to
	emacs-w3m is not displayed.  w3m-print-this-url() has been broken
	in buffers displaying text/html messages, because w3m-message()
	was too silent.

2004-01-15  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-pocketgames.el (shimbun-make-contents): New method.
	(shimbun-pocketgames-article-1): Rename to
	`shimbun-pocketgames-article'.
	(shimbun-pocketgames-comment-article): Abolished.
	(shimbun-pocketgames-article): Ditto.
	(initialize-instance): Ditto.
	(shimbun-article): Ditto.
	(shimbun-pocketgames-content-hash-length): Ditto.

2004-01-15  OHASHI Akira  <bg66@koka-in.org>

	* shimbun/sb-tdiary.el (shimbun-tdiary-get-headers): Fix the
	regexp.

2004-01-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/sb-slashdot-jp.el
	(shimbun-slashdot-jp-parse-date-string): Fix the number of regexp.

2004-01-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cnet-jp.el (shimbun-rss-build-message-id): Replace